--- a/threejs/package.json
+++ b/threejs/package.json
@@ -4,18 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html",
+    "dev": "vite",
+    "build": "vite build",
     "prettier": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
-    "three": "^0.124.0"
+    "three": "^0.143.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.5.0",
+    "vite": "^2.7.2",
     "prettier": "^2.2.1"
   }
 }
